package com.example.skite.data.entities.enums

enum class SessionState(val value: String) {
    PLANNED("Planifié"),
    IN_PROGRESS("En cours"),
    FINISHED("Terminé")
}
