package com.example.skite.data.entities.enums

enum class SessionTool(val value: String) {
    NONE("Aucun"),
    TIMER("Chrono")
}

